--- a/index.html
+++ b/index.html
@@ -1,6 +1,2 @@
-<h1>
-<html>
-    <head>
-        <title>My awesome web page</title>
     </head>
-</h1>
+<img src="https://avatars.githubusercontent.com/u/94981375?v=4">
