--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
-    </head>
-<img src="https://avatars.githubusercontent.com/u/94981375?v=4">
+<ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+</ol>
+ 
