--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<ol>
-    <li>This</li>
-    <li>Is an</li>
-    <li>Ordered list</li>
+ change
 </ol>
- 
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
+
