--- a/index.html
+++ b/index.html
@@ -1,4 +1,2 @@
- change
-</ol>
-      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
-
+<head>
+<link rel="stylesheet" href="style.css"> 
